--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
 
 # Gradle:
 .idea/**/gradle.xml
