--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 .idea/**/dataSources.ids
 .idea/**/dataSources.xml
 .idea/**/dataSources.local.xml
+.idea/**/codeStyles/
+.idea/**/codeStyles/Project.xml
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
